--- a/_config.yml
+++ b/_config.yml
@@ -144,9 +144,9 @@ disqus:
 # Fill in your Utterances data to enable Utterances comments
 utterances:
   enabled: true
-  repo: chenxGen/utterances
+  repo: chenxGen/chenxGen.github.io
   issue_term: title
-  label: blog
+  label: comments
   theme: github-dark
 
 # Fill in your Google Analytics tracking ID to enable Google Analytics.
